[project]
name = "ibc_lightning"
version = "0.0.1"
description = "pytorch-lightning implementation of IBC"
authors = [
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
dependencies = [
    "lightning>=2.2.5",
    "einops>=0.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pytest-cov>=5.0.0",
    "wandb>=0.17.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ibc_lightning"]


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.rye.scripts]
cov = "pytest -ra --cov=src --cov-report=term --cov-report=xml"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY001",  # missing-copyright-notice
    "ISC001",  # single-line-implicit-string-concatenation
    "COM812",  # missing-comma-in-multiline
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"src/ibc_lightning/core.py" = ["PLR0913"]
"tests/conftest.py" = ["PLR6301"]
"tests/test__core.py" = ["S101"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["ibc_lightning"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
