[project]
name = "ibc-lightning"
version = "0.1.1"
description = "pytorch-lightning implementation of IBC"
readme = "README.md"
authors = [
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pydoclint>=0.5.9",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]
train = [
    "lightning>=2.4.0",
    "poethepoet>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibc_lightning"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY001"]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"src/ibc_lightning/core.py" = ["PLR0913"]
"tests/conftest.py" = ["PLR6301", "DOC201"]
"tests/test__core.py" = ["S101", "DOC201"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["ibc_lightning"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'
